@@ -8,6 +8,9 @@ Revision history for Plack-Middleware-Statsd
   - Call client's flush method (if there is one) when done, to support
     Net::Statsd::Tiny.
 
+  [Incompatible Changes]
+  - Removed the sample_rate attribute.
+
   [Documentation]
   - Added an example of accessing this statsd client from Catalyst.
 
